@@ -2,6 +2,7 @@ package com.example.onculture.domain.event.service;
 
 import com.example.onculture.domain.event.domain.Performance;
 import com.example.onculture.domain.event.dto.*;
+import com.example.onculture.domain.event.repository.BookmarkRepository;
 import com.example.onculture.domain.event.repository.PerformanceRepository;
 import com.example.onculture.global.exception.CustomException;
 import com.example.onculture.global.exception.ErrorCode;
@@ -30,11 +31,13 @@ public class PerformanceService {
     private final RestTemplate restTemplate;
     private final PerformanceRepository performanceRepository;
     private final XmlMapper xmlMapper;
+    private final BookmarkRepository bookmarkRepository;
     private static final String BASE_URL = "http://www.kopis.or.kr/openApi/restful/pblprfr";
     @Value("${KOPIS_SERVICE_KEY}")
     private String SERVICE_KEY;
 
-    public PerformanceService(PerformanceRepository performanceRepository) {
+    public PerformanceService(PerformanceRepository performanceRepository, BookmarkRepository bookmarkRepository) {
+        this.bookmarkRepository = bookmarkRepository;
         this.restTemplate = new RestTemplate();
         this.performanceRepository = performanceRepository;
         this.xmlMapper = new XmlMapper();
@@ -60,18 +63,23 @@ public class PerformanceService {
         performanceRepository.saveAll(performanceList);
     }
 
-    public List<EventResponseDTO> getRandomPerformances(int randomSize) {
+    public List<EventResponseDTO> getRandomPerformances(int randomSize, Long userId) {
         if (randomSize < 0) {
             throw new CustomException(ErrorCode.INVALID_INPUT_VALUE);
         }
 
         return performanceRepository.findRandomPerformances(randomSize)
                 .stream()
-                .map(EventResponseDTO::new)
+                .map(performance -> {
+                    boolean isBookmarked = bookmarkRepository
+                            .findByUserIdAndPerformanceId(userId, performance.getId())
+                            .isPresent();
+                    return new EventResponseDTO(performance, isBookmarked);
+                })
                 .toList();
     }
 
-    public EventPageResponseDTO searchPerformances(String region, String status, String titleKeyword, int pageNum, int pageSize) {
+    public EventPageResponseDTO searchPerformances(String region, String status, String titleKeyword, int pageNum, int pageSize, Long userId) {
         Specification<Performance> spec = (root, query, criteriaBuilder) -> {
             List<Predicate> predicates = new ArrayList<>();
 
@@ -103,7 +111,12 @@ public class PerformanceService {
 
         List<EventResponseDTO> posts = performancePage.getContent()
                 .stream()
-                .map(EventResponseDTO::new)
+                .map(performance -> {
+                    boolean isBookmarked = bookmarkRepository
+                            .findByUserIdAndPerformanceId(userId, performance.getId())
+                            .isPresent();
+                    return new EventResponseDTO(performance, isBookmarked);
+                })
                 .toList();
 
         EventPageResponseDTO response = new EventPageResponseDTO();
@@ -117,12 +130,15 @@ public class PerformanceService {
         return response;
     }
 
-    public EventResponseDTO getPerformance(Long performanceId) {
-        return performanceRepository.findById(performanceId)
-                .map(EventResponseDTO::new)
+    public EventResponseDTO getPerformance(Long performanceId, Long userId) {
+        Performance performance = performanceRepository.findById(performanceId)
                 .orElseThrow(() -> new CustomException(ErrorCode.NO_CONTENT));
-    }
 
+        boolean isBookmarked = bookmarkRepository.findByUserIdAndPerformanceId(userId, performanceId)
+                .isPresent();
+
+        return new EventResponseDTO(performance, isBookmarked);
+    }
 
     private List<String> fetchPerformanceIds(String from, String to, String genreCode, String status) {
         List<String> performanceIds = new ArrayList<>();
@@ -139,7 +155,7 @@ public class PerformanceService {
                 performanceIds.addAll(
                         listDTO.getPerformanceDTOS().stream()
                                 .map(PerformanceDTO::getMt20id)
-                                .collect(Collectors.toList()));
+                                .toList());
             } catch (Exception e) {
                 throw new RuntimeException("XML Parsing Error: 공연 목록, page: " + page, e);
             }
